--- a/mar27 hairstylist.html
+++ b/mar27 hairstylist.html
@@ -14,17 +14,25 @@ questions = [
   "What's new in sports today?",
   "What do you think about the hawkeyes?"
 ]
-pResponse = []
-nResponse = []
+pResponse = [
+  "I'm glad to hear that. ",
+  "That's great. ",
+  "Nice! "
+]
+nResponse = [
+  "I'm sorry to hear that. ",
+  "That sucks. ",
+  "Damn. "
+]
 
 x = prompt("How are you?")
 while (true) {
   i = parseInt(Math.random() * questions.length)
   if (/\b(good|great|well|fine|awesome|fantastic|alright)\b/i.test(x)) {
-    x = prompt("I'm glad to hear that. " + questions[i])
+    x = prompt(pResponse[i] + questions[i])
     questions.splice(i,1)
   } else if (/\b(bad|awful)\b/i.test(x)) {
-    x = prompt("I'm sorry to hear that. " + questions[i])
+    x = prompt(nResponse[i] + questions[i])
     questions.splice(i,1)
   } else {
     x = prompt("How does that make you feel?")
